@@ -1,5 +1,10 @@
 2005-12-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/beam.cc (get_default_dir): robustness: don't divide by zero.
+
+	* lily/tuplet-bracket.cc (calc_control_points): oops: typo. Read
+	connect-to-neighbor property not connect-to-other
+
 	* lily/program-option.cc (LY_DEFINE): remove Protected_scm global variable.
 	(LY_DEFINE): oops. don't forget protection.
 
